corpus/baselines/conformance/salsa/moduleExportAssignment2.errors.txt
npm.js(1,11): error TS2309: An export assignment cannot be used in a module with other exported elements.
npm.js(3,16): error TS2339: Property 'asReadInstalled' does not exist on type '(tree: any) => void'.


==== npm.js (2 errors) ====
    var npm = module.exports = function (tree) {
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.asReadInstalled = function (tree) {
                   ~~~~~~~~~~~~~~~
!!! error TS2339: Property 'asReadInstalled' does not exist on type '(tree: any) => void'.
        npm(tree) // both references should be callable
        module.exports(tree)
    }
    